--- a/server/package.json
+++ b/server/package.json
@@ -17,15 +17,20 @@
     "bcryptjs": "^2.4.3",
     "chatgpt": "^4.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "openai": "^3.3.0",
+    "path": "^0.12.7",
+    "pdfkit": "^0.15.0",
     "puppeteer": "^19.6.3",
-    "react-to-print": "^2.15.1"
+    "react-to-print": "^2.15.1",
+    "replicate": "^0.30.1"
   }
 }
