--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
     "bcryptjs": "^2.4.3",
     "chatgpt": "^4.1.1",
     "cors": "^2.8.5",
