--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "pdfkit": "^0.15.0",
     "puppeteer": "^19.6.3",
     "react-to-print": "^2.15.1",
-    "replicate": "^0.30.1"
+    "replicate": "^0.30.1",
+    "stripe": "^15.8.0"
   }
 }
