--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL_LOCAL=http://localhost:4000
-REACT_APP_API_URL_DEPLOYED=http://10.10.1.148:3000
+REACT_APP_API_URL_DEPLOYED=143.110.224.142:4000
