--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 export GEMINI_API_KEY=AIzaSyBbhfA_bvZctMpAOH-TW6obcw-7Bb2KOPM
-export FRONTEND_URL=http://localhost:4000
+export FRONTEND_URL=143.110.224.142:4000
