--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.11",
+    "server": "file:..",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
